  * loadRecipe now takes a troveSpec as its first parameter, and uses that
    troveSpec to find the trove on the local system that matches the source
    component that is being loaded.  loadRecipe also automatically searches 
    the labels that are parents of the current recipe, so if you shadow a 
    recipe, any loadRecipe lines contained in that recipe should still do 
    what you want. 

Changes in 0.50.4:
  * Most rollback information is stored as a reference to a repository
    instead of storing full rollback data on the local system. The
    localRollbacks flag in conaryrc allows the old behavior to remain.
  * The CONARY state after a merge operation on a shadow now has the
    correct fileId for files that are not different than the parent
    version.
  * Added /usr/lib/conary/conarybugz.py to make it easy to automatically
    populate bugzilla databases from repositories.
  * Sped up Strip, NormalizeInitscriptLocation, NormalizePamConfig,
    TagDescription, and TagHandler policies by limiting them to
    only appropriate directories.
  * Fixed :debuginfo to work with binaries built from more than one
    source file, and made it less aggressive by only stripping debug
    information out to the :debuginfo files, which both makes stack
    traces better without :debuginfo installed and makes libraries
    stripped for :debuginfo more likely to work.
  * When existing fileId's had no streams but the streams are provided
    by a later commit, those streams weren't always merged properly if
    there were multiple files for that fileId
  * conary config output masks user/password info in repository maps
  * the config option useDir has been changed to useDirs, and archDir has been
    changed to archDirs, to allow for tiered use/arch flag definitions, and 
    the tweaking of use and arch flag settings.  By default, useDirs and 
    archDirs look in /etc/conary/<dir>, followed by /etc/conary/distro/<dir>, 